--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cloud_firestore: ^4.17.2
   firebase_auth: ^4.19.4
   flutter_form_builder: ^9.2.1
+  syncfusion_flutter_charts: ^25.1.41+2
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
